fix alignment of main div to start at top of page behind navbar

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,5 +31,5 @@ body {
   position: relative;
   left: 50%;
   margin-left: -225px;
-  margin-top: 140px;
+  padding-top: 140px;
  }
